k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30036 # NodePort는 30000-32767 범위 내에서 설정
  selector:
    app: mysql
